===========================
Isotope eCommerce Changelog
===========================

Version 1.3.rc1 (2011-??-??)
------------------------------
- Added: new product attribute "File tree"
- Added "continue shopping" feature (Ticket #295)
- Added: new function IsotopeFrontend::prepareForm() to ease including custom forms created by the form generator
- Added CSS class "trail" to product category pages when in reader mode (Ticket #76)
- Improved: loading products is now centralized in IsotopeFrontend static functions
- Fixed radio button events in Internet Explorer (Ticket #484)
- Fixed products DCA not loaded in rare cases
- Fixed: hide customer definied fields in product edit mode
- Fixed low price calculation for advanced prices

Version 1.3.beta2 (2011-08-28)
------------------------------
- Added: runonce script will automatically generate groups based on categories (pages)
- Added support for multilingual foreignKey in attribute table
- Added a salutation text field to addresses (Ticket #329)
- Added invisible hint to active step in checkout module (Ticket #331)
- Added new rule product conditions to limit by product attribute
- Added option to invert the rule condition (match/match not)
- Added product list caching with intelligent self-configuration to display a "please wait" message only when necessary
- Added caching tables to the maintenance cleaing options
- Added .html5 & .xhtml templates for Contao 2.10 (Ticket #457)
- Added checkout stepcount classes (Ticket #491)
- Added consistent surcharge classes to cart, checkout and order details (Ticket #494)
- Added "hide in reader mode" option to product listing
- Added SQL condition field to product listing (Ticket #114)
- Added automated table/list rendering option for array attributes
- Added price tiers to product template (Ticket #466)
- Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
- Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request