@@ -22,6 +22,7 @@
  * @copyright  Winans Creative 2009, Intelligent Spark 2010, iserv.ch GmbH 2010
  * @author     Fred Bliss <fred.bliss@intelligentspark.com>
  * @author     Andreas Schempp <andreas@schempp.ch>
+ * @author     Christian de la Haye <service@delahaye.de>
  * @license    http://opensource.org/licenses/lgpl-3.0.html
  */
 
@@ -347,7 +348,13 @@ $GLOBALS['ISO_ATTR'] = array
 	'fileTree' => array
 	(
 		'sql'		=> "blob NULL"
-	)
+	),
+	'downloads' => array
+	(
+		'sql'		=> "blob NULL",
+		'backend'	=> 'fileTree',
+//		'callback'	=> array(array('IsotopeMoreattributes','imaFileDownloads')),
+	),
 );
 
 
