@@ -4,9 +4,10 @@ Isotope eCommerce Changelog
 
 Version 1.3.rc1 (2011-??-??)
 ------------------------------
-- Added: new product attribute "File tree"
+- Added new product attribute "File tree"
+- Added new product attribute "Downloads"
 - Added "continue shopping" feature (Ticket #295)
-- Added: new function IsotopeFrontend::prepareForm() to ease including custom forms created by the form generator
+- Added new function IsotopeFrontend::prepareForm() to ease including custom forms created by the form generator
 - Added CSS class "trail" to product category pages when in reader mode (Ticket #76)
 - Improved: loading products is now centralized in IsotopeFrontend static functions
 - Fixed radio button events in Internet Explorer (Ticket #484)
